2001-02-16  Brent Welch <welch@panasas.com>

	* ChangeLog:
	* INSTALL:
	* README:
	* WHATSNEW:
	* configure.in:
	* DIST_build/DIST:
	* DIST_build/Makefile.boot:
	* DIST_build/README:
	* lib/version.tcl:
	* bin/httpd.tcl:
	Changed version number to 3.3.  Gack - the .tcl files at
	least should be ".in" files.

2001-01-31  Brent Welch <welch@ajubasolutions.com>

	* lib/upload.tcl: Added a file upload domain handler.
	Check out the definition of Upload_Url, which registers
	the domain, and UploadTest, which is the sample callback.
	* lib/cgi.tcl: Added binary translation to the pipe used
	to send POST data to a CGI script.

2001-01-26  Brent Welch <welch@ajubasolutions.com>

	* bin/cgi.tcl: Fixed handling of large POST data by replacing
	an fcopy with filevent.  The works around a fcopy bug
	diagnosed by Don Porter.

2000-11-29  Brent Welch <welch@ajubasolutions.com>

	* bin/httpd.tcl: Fixed setting of auto_path in the standard
	install configuration so that the limit and crypt packages can
	be found (Peter Farmer)
	* lib/doc.tcl: Added Doc_RegisterRoot so the cgi domain can set up
	the directory mapping used by DocAccessHook. (Peter Farmer)
	* lib/cgi.tcl: Fixed "extra timer" bug found by Petrus that could cause
	erroneous aborts of CGI connections. (Petrus Vloet)
	Added use of Doc_RegisterRoot so DocAccessHook works right for
	/cgi-bin directories outside the htdocs hierarchy.  (Peter Farmer)
	Eliminated extra / build-up in /cgi/bin pathnames (Peter Farmer)

2000-11-13  Brent Welch <welch@ajubasolutions.com>

	* lib/cgi.tcl: Added checking in CgiCancel in case
	the connection has already gone away.  (Probably redundant)
	* lib/httpd.tcl: Added checking to HttpdCloseFinal in case
	the connection has already gone away.  Seemed like a bug.

2000-10-30  Brent Welch <welch@ajubasolutions.com>

	* lib/pkgIndex.tcl:  Fixed quoting issue when you have
	installed TclHttpd under "Program Files".

2000-10-26  Brent Welch <welch@ajubasolutions.com>
