@@ -34,6 +34,7 @@ find tclhttpd${HTTPD_VERSION}/htdocs -name "*.cgi" -exec chmod a+x {} \;
 
 rm -rf ${SCRATCH}/thread${THREAD_VERSION}
 cvs -d welch@cvs.sourceforge.net:/cvsroot/tcl checkout -r ${THREAD_TAG} thread
+(cd thread ; cvs -d welch@cvs.sourceforge.net:/cvsroot/tclpro checkout config)
 mv thread thread${THREAD_VERSION}
 chmod -R a+r thread${THREAD_VERSION}
 
